ipc/ipdl/test/ipdl/error/badProtocolInclude.ipdl
include protocol IDONTEXIST;

// error: nonexistent protocol ^^^

protocol badProtocolInclude {
child: Msg();
};
